# antpathmatcher

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml  type-check.yml
antpathmatcher/: __init__.py  antpathmatcher.py
scripts/: version.sh
tests/: test_antpathmatcher.py  test_antpathmatcher_readme.py
